--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.1",
     "axios": "^1.13.1",
+    "d3-scale": "^4.0.2",
     "expo": "~54.0.20",
     "expo-constants": "~18.0.10",
     "expo-font": "~14.0.9",
@@ -41,13 +42,16 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.14.0",
+    "react-native-svg": "15.12.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
+    "@types/d3-scale": "^4.0.9",
     "@types/react": "~19.1.0",
+    "@types/react-native-svg-charts": "^5.0.16",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
