--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.8",
+    "lucide-react-native": "^0.548.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.1.0",
@@ -40,7 +41,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
