--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~4.1.1",
-    "react-native-safe-area-context": "^5.4.0",
+    "react-native-safe-area-context": "^5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
@@ -50,10 +50,10 @@
     "tailwindcss": "^3.4.18"
   },
   "devDependencies": {
+    "@react-native-community/cli": "latest",
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "react-native-dotenv": "^3.4.11",
     "typescript": "~5.9.2"
   },
   "private": true
